# singularity-greeter

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.greeter.gschema.xml
po/: POTFILES.in  meson.build
resources/: dev.sinty.greeter.gresource.xml  style.css
src/: app.vala  greetd_client.vala  greeter_main.c  greeter_topbar.vala  greeter_window.vala  main.vala  power_menu_dialog.vala  user_card.vala
